--- a/code-zero-pokedex/src/app/globals.css
+++ b/code-zero-pokedex/src/app/globals.css
@@ -2,51 +2,78 @@
 @tailwind components;
 @tailwind utilities;
 
-layer base {
-  body {
-    @apply bg-background text-foreground;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    position: relative;
-    overflow: hidden;
+@layer base {
+  /* Fuentes personalizadas */
+  @font-face {
+    font-family: "PokemonDS";
+    src: url("/pokemon-ds-font.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
   }
 
-  body::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  @font-face {
+    font-family: "PokemonTitle";
+    src: url("/title2.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  html,
+  body {
+    font-family: "PokemonDS", sans-serif;
+  }
+
+  h1 {
+    font-family: "PokemonTitle", sans-serif;
+  }
+
+  * {
+    @apply border-border;
+  }
+
+  body {
+    @apply bg-background text-foreground;
     background: url("/bkg.png") no-repeat center center fixed;
     background-size: cover;
-    z-index: -1;
-    transition: opacity 0.5s ease-in-out;
-    opacity: 1; /* Imagen del fondo claro visible */
+    transition: background-color 0.3s ease, color 0.3s ease;
   }
 
-  body::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  /* Variables para modo claro */
+  :root {
+    --background: #ffffff; /* Fondo blanco */
+    --foreground: 0 0% 0%; /* Texto negro (antes 0 0% 3.9%) */
+    --primary: #1a1a1a; /* Gris oscuro (antes 0 0% 9%) */
+    --primary-foreground: #fafafa; /* Blanco claro (antes 0 0% 98%) */
+    --pokemon-red: #ff0000; /* Rojo puro (antes 0 100% 50%) */
+    --radius: 0.5rem;
+    --cards-background-modal: #d2d2d2de; /* Fondo para tarjetas */
+    --cards-background: #ebebeb; /* Fondo para tarjetas */
+    --borde-items: #191919;
+    --switch-bg: #f0f0f0;
+    --switch-icon-color: #333;
+    /* Otros colores */
+  }
+
+  [data-theme="dark"] {
+    --switch-bg: #333;
+    --switch-icon-color: #f0f0f0;
+  }
+
+  .dark body {
     background: url("/bkg_dark.png") no-repeat center center fixed;
     background-size: cover;
-    z-index: -2; /* Debajo de body::before */
-    transition: opacity 0.5s ease-in-out;
-    opacity: 0; /* Imagen del fondo oscuro oculta */
   }
 
-  .dark body::before {
-    opacity: 0; /* Oculta la imagen del fondo claro */
-  }
-
-  .dark body::after {
-    opacity: 1; /* Muestra la imagen del fondo oscuro */
-  }
-
-  body {
-    transition: background-color 0.3s ease, color 0.3s ease;
+ 
+  /* Variables para modo oscuro */
+  .dark {
+    --background: #424242; /* Fondo gris oscuro */
+    --foreground: 0 0% 100%; /* Texto blanco */
+    --primary: #fafafa; /* Blanco claro (antes 0 0% 98%) */
+    --primary-foreground: #1a1a1a; /* Gris oscuro (antes 0 0% 9%) */
+    --pokemon-red: #dc143c; /* Rojo oscuro (#dc143c, antes 220 70% 50%) */
+    --cards-background: #555555; /* Fondo para tarjetas */
+    --cards-background-modal: #7e7e7e43; /* Fondo para tarjetas */
+    --borde-items: #f0f0f0;
   }
 }
